create some endpoints
